--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "free-nextjs-admin-dashboard",
+  "name": "admin-dashboard-ajwaa",
   "version": "1.3.1",
   "private": true,
   "scripts": {
@@ -9,25 +9,42 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
+    "@mui/icons-material": "^5.15.16",
+    "@mui/material": "^5.15.16",
+    "@mui/styled-engine-sc": "^6.0.0-alpha.18",
+    "@mui/x-data-grid": "^7.3.1",
+    "@reduxjs/toolkit": "^2.2.3",
+    "@types/react-datepicker": "^6.2.0",
+    "@types/react-toastify": "^4.1.0",
+    "@types/recoil": "^0.0.9",
     "apexcharts": "^3.45.2",
+    "axios": "^1.6.8",
+    "chart.js": "^4.4.2",
     "flatpickr": "^4.6.13",
     "jsvectormap": "^1.5.3",
+    "next": "14.1.0",
     "react": "^18",
     "react-apexcharts": "^1.4.1",
+    "react-chartjs-2": "^5.2.0",
+    "react-datepicker": "^6.9.0",
     "react-dom": "^18",
-    "next": "14.1.0"
+    "react-toastify": "^10.0.5",
+    "recoil": "^0.7.7",
+    "styled-components": "^6.1.9"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
+    "eslint": "^8",
+    "eslint-config-next": "14.1.0",
     "postcss": "^8",
     "prettier": "^3.2.5",
     "prettier-plugin-tailwindcss": "^0.5.11",
     "tailwindcss": "^3.4.1",
-    "eslint": "^8",
-    "eslint-config-next": "14.1.0"
+    "typescript": "^5"
   }
 }
